change background, sync cub and text, some spacing issues

--- a/src/components/WebDevLogo/WebDevLogo.module.css
+++ b/src/components/WebDevLogo/WebDevLogo.module.css
@@ -1,7 +1,7 @@
 .logoImage {
-  width: 10%;
+  width: 6%;
   height: auto;
   display: block;
   margin: 0 auto;
-  min-width: 6rem;
+  min-width: 4rem;
 }
